# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,9 @@ import usersRouter from "./users";
 import dashboardRouter from "./dashboard";
 import categoriesRouter from "./categories";
 import suppliersRouter from "./suppliers";
+import departmentsRouter from "./departments";
+import unitsRouter from "./units";
+import storesRouter from "./stores";
 import inventoryRouter from "./inventory";
 import purchaseOrdersRouter from "./purchaseOrders";
 import grnRouter from "./grn";
@@ -24,6 +27,9 @@ router.use(usersRouter);
 router.use(dashboardRouter);
 router.use(categoriesRouter);
 router.use(suppliersRouter);
+router.use(departmentsRouter);
+router.use(unitsRouter);
+router.use(storesRouter);
 router.use(inventoryRouter);
 router.use(purchaseOrdersRouter);
 router.use(grnRouter);
